@@ -83,6 +83,44 @@ public class GenKeyTest extends TestBase {
         stmt.close();
     }
 
+    /**
+     * Test for bug [930305] getGeneratedKeys() does not work with triggers
+     */
+    public void testTrigger1() throws Exception {
+        Statement stmt = con.createStatement();
+        stmt.execute("CREATE TABLE jtdsTestTrigger1 (id INT IDENTITY (1,1) PRIMARY KEY, data INT)");
+        stmt.execute("CREATE TABLE jtdsTestTrigger2 (id INT IDENTITY (1,1) PRIMARY KEY, data INT)");
+        stmt.close();
+        
+        try {
+            stmt = con.createStatement();
+            stmt.execute("CREATE TRIGGER testTrigger1 ON jtdsTestTrigger1 FOR INSERT AS "
+                    + "INSERT INTO jtdsTestTrigger2 (data) VALUES (1)");
+            stmt.close();
+            
+            PreparedStatement pstmt = con.prepareStatement("INSERT INTO jtdsTestTrigger1 (data) VALUES (?)", Statement.RETURN_GENERATED_KEYS);
+            
+            for (int i = 0; i < 10; i++) {
+                pstmt.setInt(1, i);
+                assertEquals("Insert failed: " + i, 1, pstmt.executeUpdate());
+
+                ResultSet rs = pstmt.getGeneratedKeys();
+                
+                assertTrue("ResultSet empty: " + i, rs.next());
+                assertEquals("Bad inserted row ID: " + i, i + 1, rs.getInt(1));
+                assertTrue("ResultSet not empty: " + i, !rs.next());
+                rs.close();
+            }
+            
+            pstmt.close();
+        } finally {
+            stmt = con.createStatement();
+            stmt.execute("DROP TABLE jtdsTestTrigger1");
+            stmt.execute("DROP TABLE jtdsTestTrigger2");
+            stmt.close();
+        }
+    }
+    
     public static void main(String[] args) {
         junit.textui.TestRunner.run(GenKeyTest.class);
     }
